--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,7 @@ services:
     depends_on:
     - dbapi
     - nslord
+    - nsmaster
     environment:
     - DESECSTACK_DOMAIN
     - DESECSTACK_API_ADMIN
