--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,8 +14,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "~0.18.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "~1.1.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -70,7 +72,6 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "vuetify": "~1.1.8",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
