wip: polish dialogs

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,9 +15,10 @@
   },
   "dependencies": {
     "axios": "~0.18.0",
+    "material-design-icons-iconfont": "~3.0.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "~1.1.8"
+    "vuetify": "~1.1.9"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
