--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.5.17",
     "vue-clipboard2": "~0.2.1",
     "vue-router": "^3.0.1",
-    "vuetify": "~1.1.13"
+    "vuetify": "~1.1.13",
+    "vuex": "~3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
