--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.5.17",
     "vue-clipboard2": "~0.2.1",
     "vue-router": "^3.0.1",
+    "vuelidate": "~0.7.4",
     "vuetify": "~1.2.5",
     "vuex": "~3.0.1"
   },
@@ -73,7 +74,7 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "~15.4.2",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^3.6.0",
