--- a/webapp/package.json
+++ b/webapp/package.json
@@ -74,6 +74,7 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
+    "vue-json-pretty": "^1.4.1",
     "vue-loader": "~15.4.2",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.17",
