--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,7 @@ services:
     - DESECSTACK_NORECAPTCHA_SITE_KEY
     - DESECSTACK_NORECAPTCHA_SECRET_KEY
     networks:
+    - rearapi_celery
     - rearapi_dbapi
     - rearapi_ns
     - rearwww
@@ -180,10 +181,25 @@ services:
         tag: "desec/nsmaster"
     restart: unless-stopped
 
+  rabbitmq:
+    image: rabbitmq:3.7-alpine
+    init: true
+    volumes:
+    - rabbitmq_data:/var/lib/rabbitmq
+    networks:
+    - rearapi_celery
+    hostname: rabbitmq
+    logging:
+      driver: "syslog"
+      options:
+        tag: "desec/rabbitmq"
+    restart: unless-stopped
+
 volumes:
   dbapi_mysql:
   dblord_mysql:
   dbmaster_mysql:
+  rabbitmq_data:
 
 networks:
   # Note that it is required that the front network ranks lower (in lexical order)
@@ -199,6 +215,13 @@ networks:
       - subnet: ${DESECSTACK_IPV6_SUBNET}
   # Make sure these come after the front network (lexical order). This is why we 
   # call it rear, not back. See https://github.com/docker/docker/issues/27101
+  rearapi_celery:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+      - subnet: ${DESECSTACK_IPV4_REAR_PREFIX16}.6.0/24
+        gateway: ${DESECSTACK_IPV4_REAR_PREFIX16}.6.1
   rearapi_dbapi:
     driver: bridge
     ipam:
