Marked the value of DESECSTACK_NS as string
The value needed to be marked as string to make step 5 of the Getting
Started Guide work.

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 # relevant DNS names
 DESECSTACK_DOMAIN=example.com
-DESECSTACK_NS=ns1.example.com ns2.example.com
+DESECSTACK_NS="ns1.example.com ns2.example.com"
 
 # network
 DESECSTACK_IPV4_REAR_PREFIX16=172.16
